:wrench: Fix color contrast ratio

--- a/public/styles/blog.styl
+++ b/public/styles/blog.styl
@@ -48,7 +48,7 @@
 
 .pre > .code
     display block
-    color var(--content)
+    color var(--code-content)
     font-size 16px
     font-family: Consolas, Menlo, Monaco, "Courier New", Courier, monospace
     font-weight 700
