--- a/public/styles/init.styl
+++ b/public/styles/init.styl
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kanit:500&display=swap')
 
 :root
-    --primary #007aff
+    --primary #006dff
     --primary-overlay rgba(0,123,255,.125)
     --success #1d8640
     --success-overlay rgba(76,217,100, .25)
@@ -10,9 +10,10 @@
     --title #333
     --content #757575
 
-    --link #007aff
+    --link #006dff
     --link-overlay rgba(0,123,255,.125)
     --code #f2f2f2
+    --code-content #656565
     --preload #f9f9f9
     --background #fff
 
